# DiffLC-Differentiable-Liquid-Crystals-

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 5cb_sim_demo.ipynb
src/difflc/: __init__.py  inverse.py  oed.py  optics.py  qtensor.py  solver.py  utils.py
tests/: test_optics.py  test_physics.py  test_solver.py
