[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "difflc"
version = "0.1.0"
description = "Differentiable Landau-de Gennes simulation tools for twisted nematic 5CB cells"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Nikita" }
]
keywords = ["liquid-crystals", "nematic", "q-tensor", "pytorch", "optics", "twisted-nematic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
]
research = [
  "matplotlib>=3.8",
  "scipy>=1.11",
  "joblib>=1.3",
  "gpytorch>=1.11",
  "botorch>=0.11",
]

[project.urls]
Homepage = "https://github.com/Kali-Uga"
Repository = "https://github.com/Kali-Uga/DiffLC-Differentiable-Liquid-Crystals-"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
