[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "difflc"
version = "0.3.1"
description = "Differentiable Landau-de Gennes simulation for nematic LC cells — JAX backend, full Berreman optics"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Nikita Krutoy" }
]
keywords = [
  "liquid-crystals", "nematic", "q-tensor", "jax",
  "berreman", "optics", "twisted-nematic", "differentiable",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.24",
  "jax>=0.4.20",
  "jaxlib>=0.4.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
]
research = [
  "matplotlib>=3.8",
  "scipy>=1.11",
]

[project.urls]
Homepage = "https://github.com/Kali-Uga/DiffLC-Differentiable-Liquid-Crystals"
Repository = "https://github.com/Kali-Uga/DiffLC-Differentiable-Liquid-Crystals"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = ["notebooks"]
